kubernetes/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skidresultat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: skidresultat.index
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skidresultat-deployment
                port:
                  number: 8080
